--- a/ShakkiPeli/src/view/main.fxml
+++ b/ShakkiPeli/src/view/main.fxml
@@ -7,26 +7,30 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="550.0" minWidth="525.0" prefHeight="550.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="510.0" minWidth="480.0" prefHeight="510.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <TabPane prefHeight="550.0" prefWidth="550.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane minHeight="480.0" minWidth="480.0" prefHeight="530.0" prefWidth="480.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
-          <Tab text="GameView">
-            <content>
-              <AnchorPane fx:id="gameView" minHeight="0.0" minWidth="0.0" prefHeight="356.0" prefWidth="600.0">
+          <Tab text="Game">
+               <content>
+                  <AnchorPane fx:id="gameView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0">
                      <children>
-                        <Label fx:id="gameLabel" alignment="CENTER" text="NO CONNECTION" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Label fx:id="gameLabel" alignment="CENTER" text="NO CONNECTION" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="39.0" />
                            </font>
+                           <effect>
+                              <DropShadow blurType="GAUSSIAN" color="#f50707" />
+                           </effect>
                         </Label>
                      </children>
                   </AnchorPane>
-            </content>
+               </content>
           </Tab>
           <Tab text="Log">
             <content>
@@ -39,9 +43,9 @@
           </Tab>
         </tabs>
       </TabPane>
-      <AnchorPane prefHeight="380.0" prefWidth="416.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane prefHeight="30.0" prefWidth="371.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="28.0" prefWidth="200.0" spacing="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="2.0">
+            <HBox prefHeight="28.0" prefWidth="200.0" scaleX="0.8" scaleY="0.8" spacing="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="2.0">
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                      <children>
