--- a/ShakkiPeli/src/com/lindqvist/shakkipeli/view/main.fxml
+++ b/ShakkiPeli/src/com/lindqvist/shakkipeli/view/main.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="510.0" minWidth="480.0" prefHeight="510.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="510.0" minWidth="480.0" prefHeight="510.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lindqvist.shakkipeli.controller.MainController">
    <children>
       <TabPane minHeight="480.0" minWidth="480.0" prefHeight="530.0" prefWidth="480.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -20,7 +20,7 @@
                <content>
                   <AnchorPane fx:id="gameView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0">
                      <children>
-                        <Label fx:id="gameLabel" alignment="CENTER" text="NO CONNECTION" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Label fx:id="gameLabel" alignment="CENTER" prefHeight="480.0" prefWidth="480.0" text="NO CONNECTION" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <font>
                               <Font size="39.0" />
                            </font>
