--- a/ShakkiPeli/src/com/lindqvist/shakkipeli/view/root.fxml
+++ b/ShakkiPeli/src/com/lindqvist/shakkipeli/view/root.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="535.0" minWidth="480.0" prefHeight="535.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RootController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="535.0" minWidth="480.0" prefHeight="535.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lindqvist.shakkipeli.controller.RootController">
    <top>
       <MenuBar maxHeight="25.0" minHeight="25.0" prefHeight="25.0" BorderPane.alignment="CENTER">
         <menus>
